# luneos-recovery-ui

./: .gitmodules  CMakeLists.txt  README.md  main.c
desktop/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c
recovery/: CMakeLists.txt  main.c
recovery/ui/: Prelude_20.c  Prelude_40.c  actions.c  actions.h  main_frame.c  main_frame.h
